--- a/frontend/admin/users.html
+++ b/frontend/admin/users.html
@@ -99,7 +99,7 @@
         <div class="flex gap-4">
           <button
             onclick="exportToExcel()"
-            class="bg-emerald-600 text-white px-6 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest hover:bg-emerald-700 transition-all"
+            class="bg-emerald-600 text-white px-6 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest hover:bg-emerald-700 transition-all shadow-lg"
           >
             <i class="fas fa-file-excel mr-2"></i> Export Excel
           </button>
