--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -128,9 +128,9 @@
               <div
                 class="flex justify-between text-sm font-bold text-slate-600 px-1"
               >
-                <span>Delivery Charge</span>
+                <span>Shipping Charge</span>
                 <span class="text-green-600 font-black uppercase text-[10px]"
-                  >Free Delivery</span
+                  >Free</span
                 >
               </div>
               <div
