--- a/frontend/index.html
+++ b/frontend/index.html
@@ -331,8 +331,7 @@
                 Our Vision
               </h3>
               <p class="text-gray-600 leading-relaxed font-medium">
-                To become the region’s most trusted source for premium
-                electrical solutions...
+                To become the region’s most trusted and comprehensive source for premium electrical solutions, recognized as the essential link between global innovation and local development. We aim to define the standard for reliability in the electrical supply chain.
               </p>
             </div>
           </div>
@@ -355,8 +354,7 @@
                 Our Mission
               </h3>
               <p class="text-gray-600 leading-relaxed font-medium">
-                At Mishra Industries Limited, our mission is to simplify the
-                procurement process...
+                At Mishra Industries Limited, our mission is to simplify the procurement process for our clients by offering unparalleled access to a vast range of top-tier branded electrical products under one roof. We are committed to delivering quality, ensuring on-time availability, and providing expert support to power projects of every scale.
               </p>
             </div>
           </div>
@@ -673,7 +671,7 @@
                 <a
                   href="support-hub.html#bulk"
                   class="hover:text-orange-500 transition-colors"
-                  >Bulk Quotations</a
+                  >Quotation Request</a
                 >
               </li>
             </ul>
