--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -18,23 +18,12 @@
       body {
         font-family: "Plus Jakarta Sans", sans-serif;
       }
-      .input-group:focus-within label {
-        color: #f97316;
-      }
-      .input-group:focus-within .icon-box {
-        background-color: #1e3a8a;
-        color: white;
-      }
       .custom-scrollbar::-webkit-scrollbar {
         width: 5px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
         background: #1e3a8a;
         border-radius: 10px;
-      }
-      .form-section:focus-within {
-        border-color: #1e3a8a;
-        box-shadow: 0 10px 30px -10px rgba(30, 58, 138, 0.1);
       }
     </style>
   </head>
@@ -50,12 +39,12 @@
           <i class="fas fa-spinner fa-spin text-5xl text-blue-900"></i>
         </div>
         <h2 class="text-3xl font-black text-white uppercase tracking-tighter">
-          Initializing Gateway
+          Syncing Order
         </h2>
         <p
           class="text-blue-200 font-bold text-[10px] uppercase tracking-[0.3em] mt-2"
         >
-          Connecting to Secure Payment Node...
+          Connecting to Secure Mishra Node...
         </p>
       </div>
     </div>
@@ -68,18 +57,18 @@
         >
           MISHRA <span class="text-orange-500">IND.</span>
         </h1>
-        <div
-          class="flex items-center space-x-3 text-green-600 font-bold text-[10px] uppercase tracking-widest"
+        <button
+          onclick="location.href = 'shop.html'"
+          class="text-[10px] font-black uppercase text-slate-400 hover:text-blue-900 transition-all flex items-center"
         >
-          <i class="fas fa-lock"></i>
-          <span>SSL Secured Checkout</span>
-        </div>
+          <i class="fas fa-arrow-left mr-2"></i> Back to Shop
+        </button>
       </div>
     </nav>
 
     <div class="container mx-auto px-6">
       <div class="flex flex-col lg:flex-row gap-12 items-start justify-center">
-        <div class="w-full lg:w-[60%] animate__animated animate__fadeIn">
+        <div class="w-full lg:w-[60%]">
           <div class="mb-10">
             <h2
               class="text-4xl font-black text-blue-900 uppercase tracking-tighter"
@@ -87,13 +76,13 @@
               Delivery Details
             </h2>
             <p class="text-slate-400 font-bold text-xs mt-1">
-              Provide accurate info for ISI-certified shipping.
+              Provide accurate info for Mishra-certified logistics.
             </p>
           </div>
 
           <form id="checkoutForm" class="space-y-6">
             <div
-              class="form-section bg-white p-8 rounded-[2.5rem] border border-slate-100 transition-all duration-300"
+              class="bg-white p-8 rounded-[2.5rem] border border-slate-100 shadow-sm"
             >
               <h3
                 class="text-[10px] font-black text-orange-500 uppercase tracking-[0.3em] mb-6"
@@ -101,91 +90,52 @@
                 01. Recipient Information
               </h3>
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="input-group space-y-2">
-                  <label
-                    class="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1"
-                    >Consignee Name</label
-                  >
-                  <div class="relative">
-                    <div
-                      class="icon-box absolute left-2 top-2 w-10 h-10 bg-slate-50 rounded-xl flex items-center justify-center transition-all text-slate-300"
-                    >
-                      <i class="fas fa-user text-xs"></i>
-                    </div>
-                    <input
-                      type="text"
-                      id="custName"
-                      placeholder="Full Name"
-                      class="w-full bg-slate-50 border-none pl-14 pr-5 py-4 rounded-2xl outline-none font-bold text-slate-700 focus:ring-2 focus:ring-blue-900/10 transition-all"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="input-group space-y-2">
-                  <label
-                    class="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1"
-                    >Contact Number</label
-                  >
-                  <div class="relative">
-                    <div
-                      class="icon-box absolute left-2 top-2 w-10 h-10 bg-slate-50 rounded-xl flex items-center justify-center transition-all text-slate-300"
-                    >
-                      <i class="fas fa-phone text-xs"></i>
-                    </div>
-                    <input
-                      type="tel"
-                      id="custPhone"
-                      placeholder="+91 XXXX"
-                      class="w-full bg-slate-50 border-none pl-14 pr-5 py-4 rounded-2xl outline-none font-bold text-slate-700 focus:ring-2 focus:ring-blue-900/10 transition-all"
-                      required
-                    />
-                  </div>
-                </div>
+                <input
+                  type="text"
+                  id="custName"
+                  placeholder="Full Name"
+                  class="w-full bg-slate-50 p-4 rounded-2xl outline-none font-bold text-slate-700"
+                  required
+                />
+                <input
+                  type="tel"
+                  id="custPhone"
+                  placeholder="Mobile Number"
+                  class="w-full bg-slate-50 p-4 rounded-2xl outline-none font-bold text-slate-700"
+                  required
+                />
               </div>
             </div>
 
             <div
-              class="form-section bg-white p-8 rounded-[2.5rem] border border-slate-100 transition-all duration-300"
+              class="bg-white p-8 rounded-[2.5rem] border border-slate-100 shadow-sm"
             >
               <h3
                 class="text-[10px] font-black text-orange-500 uppercase tracking-[0.3em] mb-6"
               >
-                02. Logistics Hub Destination
+                02. Shipping Destination
               </h3>
               <div class="space-y-6">
-                <div class="input-group space-y-2">
-                  <label
-                    class="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1"
-                    >Shipping Address</label
-                  >
-                  <div class="relative">
-                    <div
-                      class="icon-box absolute left-2 top-2 w-10 h-10 bg-slate-50 rounded-xl flex items-center justify-center transition-all text-slate-300"
-                    >
-                      <i class="fas fa-map-marker-alt text-xs"></i>
-                    </div>
-                    <textarea
-                      id="custAddress"
-                      placeholder="Street, Landmark"
-                      rows="2"
-                      class="w-full bg-slate-50 border-none pl-14 pr-5 py-4 rounded-2xl outline-none font-bold text-slate-700 resize-none focus:ring-2 focus:ring-blue-900/10 transition-all"
-                      required
-                    ></textarea>
-                  </div>
-                </div>
+                <textarea
+                  id="custAddress"
+                  placeholder="Full Street Address"
+                  rows="2"
+                  class="w-full bg-slate-50 p-4 rounded-2xl outline-none font-bold text-slate-700 resize-none"
+                  required
+                ></textarea>
                 <div class="grid grid-cols-2 gap-6">
                   <input
                     type="text"
                     id="custCity"
                     placeholder="City"
-                    class="w-full bg-slate-50 border-none px-6 py-4 rounded-2xl outline-none font-bold text-slate-700 focus:ring-2 focus:ring-blue-900/10 transition-all"
+                    class="w-full bg-slate-50 p-4 rounded-2xl outline-none font-bold text-slate-700"
                     required
                   />
                   <input
                     type="text"
                     id="custPin"
                     placeholder="Pincode"
-                    class="w-full bg-slate-50 border-none px-6 py-4 rounded-2xl outline-none font-bold text-slate-700 focus:ring-2 focus:ring-blue-900/10 transition-all"
+                    class="w-full bg-slate-50 p-4 rounded-2xl outline-none font-bold text-slate-700"
                     required
                   />
                 </div>
@@ -194,26 +144,16 @@
           </form>
         </div>
 
-        <div
-          class="w-full lg:w-[420px] sticky top-28 animate__animated animate__fadeInRight"
-        >
+        <div class="w-full lg:w-[420px] sticky top-28">
           <div class="bg-blue-900 text-white rounded-[3rem] p-10 shadow-2xl">
-            <div
-              class="flex justify-between items-center mb-10 border-b border-blue-800 pb-6"
+            <h3
+              class="text-lg font-black uppercase tracking-widest mb-10 border-b border-blue-800 pb-6"
             >
-              <h3 class="text-lg font-black uppercase tracking-widest">
-                Final Bill
-              </h3>
-              <span
-                id="cartCount"
-                class="bg-orange-500 px-3 py-1 rounded-full text-[9px] font-black"
-                >0 ITEMS</span
-              >
-            </div>
-
+              Final Bill
+            </h3>
             <div
               id="orderReviewItems"
-              class="space-y-4 mb-8 max-h-56 overflow-y-auto pr-4 custom-scrollbar"
+              class="space-y-4 mb-8 max-h-64 overflow-y-auto pr-2 custom-scrollbar"
             ></div>
 
             <div class="space-y-4 pt-6 border-t border-blue-800">
@@ -221,32 +161,40 @@
                 class="flex justify-between text-[10px] font-bold opacity-50 uppercase tracking-widest"
               >
                 <span>Subtotal</span>
-                <span id="displaySubtotal">₹0.00</span>
+                <span id="displaySubtotal">₹0</span>
+              </div>
+              <div
+                class="flex justify-between text-[10px] font-black text-green-400 uppercase tracking-widest"
+              >
+                <span>Shipping Charge</span>
+                <span class="text-green-1000 font-black uppercase text-[10px]"
+                  >Free</span
+                >
               </div>
               <div
                 class="flex justify-between text-[10px] font-black text-green-400 uppercase tracking-widest"
               >
                 <span>GST (18% Statutory)</span>
-                <span id="displayGst">₹0.00</span>
+                <span id="displayGst">₹0</span>
               </div>
               <div
                 class="flex justify-between text-3xl font-black pt-8 mt-4 border-t-2 border-white/10"
               >
                 <span class="text-xs uppercase opacity-40">Total</span>
-                <span id="displayTotal">₹0.00</span>
+                <span id="displayTotal">₹0</span>
               </div>
             </div>
 
             <button
               onclick="placeOrder()"
-              class="w-full bg-orange-500 text-white font-black py-6 rounded-2xl mt-10 hover:bg-orange-600 transition-all shadow-xl uppercase tracking-[0.2em] text-[10px] active:scale-95"
+              class="w-full bg-orange-500 text-white font-black py-6 rounded-2xl mt-10 hover:bg-orange-600 transition-all shadow-xl uppercase tracking-[0.2em] text-[10px]"
             >
               Confirm & Pay <i class="fas fa-arrow-right ml-2"></i>
             </button>
             <p
               class="text-center text-[8px] font-bold text-blue-400 mt-6 uppercase tracking-[0.4em]"
             >
-              Secure Node: Mishra Industries
+              Node Secured via Mishra Industries
             </p>
           </div>
         </div>
