--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Gateway | Mishra Industries</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -21,10 +22,24 @@
       }
       .pay-card {
         transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        border: 2px solid transparent;
       }
       .pay-card:hover {
         transform: translateY(-8px);
         border-color: #f97316;
+        box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.1);
+      }
+      .success-checkmark {
+        width: 80px;
+        height: 80px;
+        margin: 0 auto;
+        background: #22c55e;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 40px;
       }
     </style>
   </head>
@@ -36,72 +51,119 @@
         <p
           class="text-[10px] font-black uppercase tracking-[0.4em] text-blue-300 mb-2"
         >
-          Payable Amount
+          Secure Settlement Node
         </p>
         <h1 id="payAmount" class="text-5xl font-black tracking-tighter">
           ₹0.00
         </h1>
-        <div class="mt-4 flex justify-center space-x-2">
+        <div class="mt-4">
           <span
-            class="bg-blue-800 text-[8px] font-black px-3 py-1 rounded-full uppercase"
-            >Order #MI-${Math.floor(Math.random()*9000)}</span
+            id="orderIdTag"
+            class="bg-blue-800 text-[8px] font-black px-3 py-1 rounded-full uppercase tracking-widest"
+            >Generating ID...</span
           >
         </div>
       </div>
 
-      <div class="p-10 space-y-6">
+      <div id="methodContainer" class="p-10 space-y-6">
         <h3
           class="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-2"
         >
-          Select Settlement Method
+          Select Payment Method
         </h3>
 
         <div
-          onclick="initiateUPI()"
-          class="pay-card group p-8 border-2 border-slate-50 rounded-[2.5rem] cursor-pointer bg-slate-50/30 hover:bg-white hover:shadow-xl transition-all"
+          onclick="initiateRazorpay()"
+          class="pay-card group p-8 bg-slate-50/50 rounded-[2.5rem] cursor-pointer hover:bg-white transition-all"
         >
           <div class="flex items-center justify-between">
             <div class="flex items-center space-x-5">
               <div
-                class="w-14 h-14 bg-white rounded-2xl flex items-center justify-center shadow-sm group-hover:bg-orange-500 group-hover:text-white transition-all"
+                class="w-14 h-14 bg-white rounded-2xl flex items-center justify-center shadow-sm group-hover:bg-blue-600 group-hover:text-white transition-all text-blue-600"
               >
-                <i class="fas fa-mobile-screen-button text-xl"></i>
+                <i class="fas fa-credit-card text-xl"></i>
               </div>
               <div>
                 <p class="font-black text-blue-900 text-lg">
-                  Instant UPI Transfer
+                  Cards / NetBanking
                 </p>
                 <p class="text-[9px] font-bold text-slate-400 uppercase">
-                  9431775160@ibl
+                  Automated Razorpay Node
                 </p>
               </div>
             </div>
             <i
-              class="fas fa-chevron-right text-slate-200 group-hover:text-orange-500"
+              class="fas fa-chevron-right text-slate-200 group-hover:text-blue-600"
             ></i>
           </div>
         </div>
 
         <div
-          onclick="finalizeTransaction('COD')"
-          class="pay-card group p-8 border-2 border-slate-50 rounded-[2.5rem] cursor-pointer bg-slate-50/30 hover:bg-white hover:shadow-xl transition-all"
+          id="upiMainCard"
+          onclick="showUpiInput()"
+          class="pay-card group p-8 bg-slate-50/50 rounded-[2.5rem] cursor-pointer hover:bg-white transition-all"
         >
           <div class="flex items-center justify-between">
             <div class="flex items-center space-x-5">
               <div
-                class="w-14 h-14 bg-white rounded-2xl flex items-center justify-center shadow-sm group-hover:bg-blue-900 group-hover:text-white transition-all"
+                class="w-14 h-14 bg-white rounded-2xl flex items-center justify-center shadow-sm group-hover:bg-orange-500 group-hover:text-white transition-all text-orange-500"
               >
-                <i class="fas fa-hand-holding-dollar text-xl"></i>
+                <i class="fas fa-bolt text-xl"></i>
               </div>
               <div>
-                <p class="font-black text-blue-900 text-lg">Cash on Delivery</p>
+                <p class="font-black text-blue-900 text-lg">Instant UPI App</p>
                 <p class="text-[9px] font-bold text-slate-400 uppercase">
-                  Pay at your doorstep
+                  Enter VPA to Pay
                 </p>
               </div>
             </div>
             <i
-              class="fas fa-chevron-right text-slate-200 group-hover:text-blue-900"
+              class="fas fa-chevron-down text-slate-200 group-hover:text-orange-500"
+            ></i>
+          </div>
+
+          <div
+            id="upiInputArea"
+            class="hidden mt-6 pt-6 border-t border-slate-100 animate__animated animate__fadeIn"
+          >
+            <input
+              type="text"
+              id="userUpiId"
+              placeholder="example@upi"
+              class="w-full p-4 bg-white border-2 border-slate-100 rounded-2xl outline-none focus:border-orange-500 font-bold mb-4"
+            />
+            <button
+              onclick="
+                event.stopPropagation();
+                initiateUPI();
+              "
+              class="w-full bg-orange-500 text-white py-4 rounded-2xl font-black uppercase text-xs tracking-widest shadow-xl"
+            >
+              Pay to Sachinmishrapb@upi
+            </button>
+          </div>
+        </div>
+
+        <div
+          onclick="finalizeTransactionCOD()"
+          class="pay-card group p-8 bg-slate-50/50 rounded-[2.5rem] cursor-pointer hover:bg-white transition-all"
+        >
+          <div class="flex items-center justify-between">
+            <div class="flex items-center space-x-5">
+              <div
+                class="w-14 h-14 bg-white rounded-2xl flex items-center justify-center shadow-sm group-hover:bg-slate-900 group-hover:text-white transition-all text-slate-900"
+              >
+                <i class="fas fa-truck-fast text-xl"></i>
+              </div>
+              <div>
+                <p class="font-black text-blue-900 text-lg">Cash on Delivery</p>
+                <p class="text-[9px] font-bold text-slate-400 uppercase">
+                  Immediate Order Placement
+                </p>
+              </div>
+            </div>
+            <i
+              class="fas fa-chevron-right text-slate-200 group-hover:text-slate-900"
             ></i>
           </div>
         </div>
@@ -109,19 +171,36 @@
 
       <div
         id="statusBox"
-        class="hidden p-12 text-center animate__animated animate__fadeIn border-t border-slate-50"
+        class="hidden p-20 text-center animate__animated animate__fadeIn"
       >
+        <div id="processingLoader">
+          <div
+            class="w-12 h-12 border-4 border-slate-100 border-t-orange-500 rounded-full animate-spin mx-auto mb-4"
+          ></div>
+          <p
+            class="text-[10px] font-black text-blue-900 uppercase tracking-widest"
+          >
+            Confirming Order with Atlas...
+          </p>
+        </div>
         <div
-          class="w-12 h-12 border-4 border-slate-100 border-t-orange-500 rounded-full animate-spin mx-auto mb-4"
-        ></div>
-        <p
-          class="text-[10px] font-black text-blue-900 uppercase tracking-widest"
+          id="successDisplay"
+          class="hidden animate__animated animate__bounceIn"
         >
-          Updating Mishra Atlas...
-        </p>
+          <div class="success-checkmark mb-6">
+            <i class="fas fa-check"></i>
+          </div>
+          <h2 class="text-2xl font-black text-blue-900 uppercase">
+            Order Confirmed!
+          </h2>
+          <p
+            class="text-[10px] font-bold text-slate-400 mt-2 uppercase tracking-[0.3em]"
+          >
+            Syncing with Admin Dashboard...
+          </p>
+        </div>
       </div>
     </div>
-
     <script src="js/payment.js"></script>
   </body>
 </html>
