--- a/frontend/support-hub.html
+++ b/frontend/support-hub.html
@@ -96,24 +96,43 @@
             <section id="bulk" class="scroll-mt-32">
     <div class="bg-blue-900 rounded-[3rem] p-12 text-white shadow-2xl relative overflow-hidden">
         <div class="relative z-10">
-            <h2 class="text-4xl font-black uppercase tracking-tighter mb-2">Bulk Quotation Request</h2>
+            <h2 class="text-4xl font-black uppercase tracking-tighter mb-2">Request for Quotation</h2>
             <p class="text-blue-300 font-bold mb-10">Specialized wholesale pricing for contractors and retailers.</p>
             
             <form id="bulkForm" class="grid md:grid-cols-2 gap-6" onsubmit="handleBulkSubmission(event)">
-                <input type="text" id="bulkCompany" placeholder="Company / Firm Name" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50" required>
-                <input type="text" id="bulkGST" placeholder="GST Identification Number" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50">
-                <select id="bulkCategory" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold text-blue-200">
-                    <option value="" class="text-blue-900">Select Category</option>
-                    <option value="Switchgears" class="text-blue-900">Switchgears</option>
-                    <option value="Industrial Wires" class="text-blue-900">Industrial Wires</option>
-                    <option value="Project Lighting" class="text-blue-900">Project Lighting</option>
-                </select>
-                <input type="number" id="bulkQty" placeholder="Estimated Quantity" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50">
-                <textarea id="bulkRequirements" placeholder="Describe your project requirements (include Contact info)..." class="md:col-span-2 bg-white/10 border-2 border-white/10 rounded-2xl p-4 h-32 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50" required></textarea>
-                <button type="submit" id="bulkSubmitBtn" class="md:col-span-2 bg-orange-500 py-5 rounded-2xl font-black uppercase tracking-widest hover:bg-white hover:text-blue-900 transition-all shadow-xl">
-                    Submit Project Enquiry
-                </button>
-            </form>
+    <input type="text" id="bulkCompany" placeholder="Company / Firm Name" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50" required>
+
+    <input type="text" id="bulkGST" placeholder="GST Identification Number" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50">
+
+    <select id="bulkCategory" class="bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold text-blue-200">
+        <option value="" class="text-blue-900">Select Category</option>
+        <option value="Switchgears" class="text-blue-900">Switch</option>
+        <option value="Industrial Wires" class="text-blue-900">Industrial Wires</option>
+        <option value="Project Lighting" class="text-blue-900">Project Lighting</option>
+    </select>
+
+    <!-- Quantity + Unit Wrapper -->
+    <div class="flex gap-3">
+        <input type="number" id="bulkQty" placeholder="Estimated Quantity"
+            class="w-2/3 bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50">
+
+        <select id="bulkUnit"
+            class="w-1/3 bg-white/10 border-2 border-white/10 rounded-2xl p-4 outline-none focus:border-orange-500 transition font-bold text-blue-200">
+            <option value="pcs" selected class="text-blue-900">pcs</option>
+            <option value="kg" class="text-blue-900">kg</option>
+            <option value="box" class="text-blue-900">box</option>
+        </select>
+    </div>
+
+    <textarea id="bulkRequirements" placeholder="Describe your project requirements (include Contact info)..."
+        class="md:col-span-2 bg-white/10 border-2 border-white/10 rounded-2xl p-4 h-32 outline-none focus:border-orange-500 transition font-bold placeholder:text-blue-200/50"
+        required></textarea>
+
+    <button type="submit" id="bulkSubmitBtn"
+        class="md:col-span-2 bg-orange-500 py-5 rounded-2xl font-black uppercase tracking-widest hover:bg-white hover:text-blue-900 transition-all shadow-xl">
+        Submit Request
+    </button>
+</form>
         </div>
     </div>
 </section>
