--- a/frontend/index.html
+++ b/frontend/index.html
@@ -607,11 +607,7 @@
                   >Returns & Refunds</a
                 >
               </li>
-              <li>
-                <a href="#" class="hover:text-orange-500 transition-colors"
-                  >Track Order</a
-                >
-              </li>
+            
             </ul>
           </div>
 
@@ -671,7 +667,7 @@
                 <a
                   href="support-hub.html#bulk"
                   class="hover:text-orange-500 transition-colors"
-                  >Quotation Request</a
+                  >Request a Quotation (RFQ)</a
                 >
               </li>
             </ul>
