--- a/frontend/product-details.html
+++ b/frontend/product-details.html
@@ -163,7 +163,7 @@
               ></span>
               <span
                 id="originalPrice"
-                class="text-xl text-slate-300 line-through font-bold hidden"
+                class="text-xl text-blue-900 line-through font-bold hidden"
               ></span>
             </div>
 
