--- a/frontend/admin/users.html
+++ b/frontend/admin/users.html
@@ -9,8 +9,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap");
+      body {
+        font-family: "Plus Jakarta Sans", sans-serif;
+      }
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
       }
@@ -21,7 +29,56 @@
     </style>
   </head>
 
-  <body class="bg-slate-50 flex min-h-screen font-sans custom-scrollbar">
+  <body class="bg-slate-50 flex min-h-screen custom-scrollbar">
+    <div
+      id="orderHistoryModal"
+      class="fixed inset-0 z-[2000] bg-slate-900/60 backdrop-blur-sm flex items-center justify-center hidden p-6"
+    >
+      <div
+        class="bg-white w-full max-w-xl rounded-[3rem] shadow-2xl overflow-hidden animate__animated animate__zoomIn"
+      >
+        <div
+          class="bg-blue-900 p-8 text-white flex justify-between items-center"
+        >
+          <div>
+            <h3
+              id="modalUserName"
+              class="font-black uppercase tracking-widest text-lg leading-none"
+            >
+              Customer Orders
+            </h3>
+            <p
+              class="text-[10px] text-blue-300 font-bold uppercase mt-2 tracking-[0.2em]"
+            >
+              Historical Purchase Records
+            </p>
+          </div>
+          <button
+            onclick="closeOrderModal()"
+            class="w-10 h-10 flex items-center justify-center bg-white/10 rounded-full hover:bg-white/20 transition-all text-2xl"
+          >
+            &times;
+          </button>
+        </div>
+        <div
+          id="modalOrderList"
+          class="p-8 space-y-4 max-h-[60vh] overflow-y-auto custom-scrollbar bg-slate-50/50"
+        ></div>
+        <div
+          class="p-6 border-t border-slate-100 bg-white flex justify-between items-center"
+        >
+          <p
+            class="text-[10px] font-black text-slate-400 uppercase tracking-widest"
+          >
+            Total Lifetime Spend
+          </p>
+          <p id="modalLifetimeValue" class="text-xl font-black text-blue-900">
+            ₹0
+          </p>
+        </div>
+      </div>
+    </div>
+
     <aside
       class="w-72 bg-slate-900 sticky top-0 h-screen text-white p-8 shadow-2xl flex flex-col"
     >
